Added responsive in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -55,9 +55,9 @@
                         </div>
                         <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/9f6c08831b0d22c4c929fc50ada08d29650f1917-1280x721.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">LEAGUE OF LEGENDS</a></li>
                         <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/00acf75deb633d53bd11ba9170e4fc9d4afcf4c5-1920x1080.jpg??&format=pjpg&quality=85'})" ><a class="option_container" href="#">VALORANT</a></li>
-                        <li><a class="option_container" href="#">TEAMFIGHT TACTICS</a></li>
-                        <li><a class="option_container" href="#">LEGENDS OF RUNETERRA</a></li>
-                        <li><a class="option_container" href="#">LOL: WILD RIFT</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/fce3ba7a937c6d491fc3653458c83d5e5f36c0ef-1920x1080.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">TEAMFIGHT TACTICS</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/95f244060cf64373f7b30e9db7edbbd41f705f04-1920x1080.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">LEGENDS OF RUNETERRA</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/a0d4a04e8059f9e9426b8a8ed7a2b0174886e754-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">LOL: WILD RIFT</a></li>
                     </ul>
                 </div>
                 <div>
@@ -65,19 +65,19 @@
                         <div class="title_option_container">
                             Forge
                         </div>
-                        <li><a class="option_container" href="#">HEXTECH MAYHEM</a></li>
-                        <li><a class="option_container" href="#">THE MAGESEEKER</a></li>
-                        <li><a class="option_container" href="#">RUINED KING</a></li>
-                        <li><a class="option_container" href="#">CONV/RGENCE</a></li>
-                        <li><a class="option_container" href="#">SONG OF NUNU</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/410485481cef2bf4a4a15e2beedf9b929012a0c3-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">HEXTECH MAYHEM</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/02281bbdccf6311df4ae705d099ed45beb42f64e-1920x1080.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">THE MAGESEEKER</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/904be9b7fb2dc287fc1a8f30f0421134eed3a35d-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">RUINED KING</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/96d6ec42a3be4ed02195fb31816bb2f188c5121d-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">CONV/RGENCE</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/8b0fd50a7bbd02b24bc2c5df278b1a556cf0cecf-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">SONG OF NUNU</a></li>
                         <li><a class="option_container" href="#">JUEGOS DE RIOT FORGE</a></li>
                     </ul>
                     <ul style="margin-top: 24px;">
                         <div class="title_option_container">
                             ESPORTS
                         </div>
-                        <li><a class="option_container" href="#">LOL ESPORTS</a></li>
-                        <li><a class="option_container" href="#">ESPORTS DE VALORANTR</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/887a22f93dff0593674b4df1a267b840f85b01e7-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">LOL ESPORTS</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/8459546a9d8a91074ef7f4ef8e43ebd561d30396-1920x1080.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">ESPORTS DE VALORANTR</a></li>
                     </ul>
                 </div>
                 <div>
@@ -85,18 +85,18 @@
                         <div class="title_option_container">
                             Entretenimiento
                         </div>
-                        <li><a class="option_container" href="#">ARCANE</a></li>
-                        <li><a class="option_container" href="#">UNIVERSO</a></li>
-                        <li><a class="option_container" href="#">MÚSICA DE RIOT GAMES</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/46e6f7f8295ccf1ffa2480d7f0c1b9926204c08f-1920x1080.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">ARCANE</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/70361f54e9202cccae3852adebdc567246d83179-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">UNIVERSO</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/ada5282be4b3fa4225027ac9170014db245deb58-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">MÚSICA DE RIOT GAMES</a></li>
                     </ul>
                     <ul style="margin-top: 24px;">
                         <div class="title_option_container">
                             Negocios
                         </div>
-                        <li><a class="option_container" href="#">RIOT GAMES</a></li>
-                        <li><a class="option_container" href="#">MERCHANDISING DE RIOT</a></li>
-                        <li><a class="option_container" href="#">RIOT MOBILE</a></li>
-                        <li><a class="option_container" href="#">ASISTENCIA DE RIOT</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/73a9ef5885cacca97a8589c4263d324c290cf536-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">RIOT GAMES</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/92cb46a6c9e197cda4523d98c0ae54b93775ff4d-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">MERCHANDISING DE RIOT</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/14c0d13d9191eda569d1c5d4bc8905175a2e934b-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">RIOT MOBILE</a></li>
+                        <li (mouseleave)="onMouseUp()" (mouseenter)="onMouseEnter({description: '', imageUrl: 'https://cmsassets.rgpub.io/sanity/images/dsfx7636/riotbar/b9c9b6e5de1aaf80222934c67e4e7947d877b443-1320x743.jpg??&format=pjpg&quality=85'})"><a class="option_container" href="#">ASISTENCIA DE RIOT</a></li>
                     </ul>
                 </div>
             </div>
