--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -145,6 +145,13 @@
     cursor: pointer;
 }
 
+
+
+
+
+
+
+
 .content_header_container {
     display: flex;
     gap: 16px;
@@ -230,7 +237,6 @@
     background-color: #4a4a4a44;
 }
 
-
 @media screen and (max-width: 1024px) {
     .menu_button {
         display: flex;
@@ -251,6 +257,31 @@
         width: 24px;
         height: 24px;
     }
+
+    .dialog_container {
+        flex-direction: column;
+        max-width: 468px;
+        width: 100%;
+        padding: 16px;
+        padding-bottom: 64px;
+        max-height: 100dvh;
+        overflow-y: scroll;
+    }
+
+    .content_header_container{
+        flex-direction: column;
+        gap: 32px;
+    }
+
+    .options_container {
+        flex-direction: column;
+    }
+
+    .images_notifications_container {
+        flex-direction: column;
+        gap: 32px;
+    }
+
 }
 
 @media screen and (max-width: 360px) {
