--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,7 +7,7 @@
     position: sticky;
     top: 0;
     z-index: 10;
-    position: relative;
+    /* position: relative; */
 }
 
 .header_container.scrolled {
@@ -78,6 +78,7 @@
     font-weight: 600;
     letter-spacing: 2px;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .href_button {
@@ -235,6 +236,131 @@
 
 .option_container:hover{
     background-color: #4a4a4a44;
+}
+
+#myDialog {
+    margin: auto;
+    border: none;
+    min-width: 300px;
+    max-width: 460px;
+    width: 100%;
+    border-radius: 8px;
+}
+
+.login_container {
+    
+    padding: 32px;
+    padding-bottom: 64px;
+    z-index: 999;
+}
+
+.dialog_close_button {
+    display: flex;
+    justify-content: right;
+}
+
+.dialog_close_button button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.login_container h2 {
+    margin-top: 12px;
+    font-size: 32px;
+    text-align: center;
+}
+
+.form {
+    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.form input {
+    padding: 20px 16px;
+    border-radius: 4px;
+    border: 1px solid #00000044;
+}
+
+.form input:hover {
+    border-color: black;
+}
+
+.form input::placeholder {
+    text-align: center;
+    font-size: 15px;
+    font-size: #333;
+    letter-spacing: 1px;
+}
+
+.form input[type='submit'] {
+    background-color: rgb(10, 10, 10);
+    color: #ddd;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 12px 16px;
+    transition: background-color 0.2s ease-in-out;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.form input[type='submit']:hover {
+    background-color: rgb(60,60,60);
+}
+
+.forgotten_password_container {
+    text-align: center;
+    color: rgb(10,10,10);
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.forgotten_password_container a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.forgotten_password_container a:hover {
+    text-decoration:underline;
+}
+
+.decorator_container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.decorator_container > div {
+    flex: 1;
+}
+
+.button_create_user {
+    border: none;
+    width: 70%;
+    margin: auto;
+    background-color: rgb(10, 170, 10);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 12px 16px;
+    transition: background-color 0.2s ease-in-out;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+dialog::backdrop {
+    backdrop-filter: blur(5px);
+    z-index: -999;
+}
+
+.dialog_container {
+    transform: translate3d(-36px,0,0);
+    width: calc(100% + 72px);
 }
 
 @media screen and (max-width: 1024px) {
